--- a/Roblox_FPS_Unlocker_Auto_Updater.vcxproj.filters
+++ b/Roblox_FPS_Unlocker_Auto_Updater.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="uncompress\uncompress.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="process\process.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
@@ -47,6 +50,9 @@
     <ClInclude Include="uncompress\uncompress.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="process\process.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="icon.ico">
@@ -56,6 +62,7 @@
   <ItemGroup>
     <None Include="LICENSE" />
     <None Include=".gitignore" />
+    <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Roblox_FPS_Unlocker_Auto_Updater.rc">
